--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer"/>
                         <li class="box"><a href="http://127.0.0.1:5501/index2.html">लॉगिन</a></li>
                         <li class="box"><a href="http://127.0.0.1:5501/index.html">होम</a></li>
                         <li class="box"><a href="http://127.0.0.1:5501/contect.html">संपर्क करें</a></li>
-                        <li class="box"><a href="http://127.0.0.1:5501/index1.html">सेवाएं</a></li>
+                        <li class="box"><a href="/index1.html">सेवाएं</a></li>
                         <li class="box"><a href="http://127.0.0.1:5501/location.html">स्थान</a></li>
                         <li class="box"><a href="http://127.0.0.1:5501/group.html">समूह से जुड़ें</a></li>
                         <li class="box"><a href="http://127.0.0.1:5501/pay.html">ऑनलाइन भुगतान</a></li>
