--- a/index1.html
+++ b/index1.html
@@ -237,14 +237,14 @@ a:hover {
       <a href="http://127.0.0.1:5501/index.html" class="nav-item" id="back-arrow">
           &#8592; <!-- Unicode character for left arrow -->
       </a>
-      <div class="nav-item"><a href="http://127.0.0.1:5501/index2.html">Login</a></div>
-      <div class="nav-item"><a href="http://127.0.0.1:5501/index.html">Home</a></div>
-      <div class="nav-item"><a href="http://127.0.0.1:5501/contect.html">Contact</a></div>
-      <div class="nav-item"><a href="http://127.0.0.1:5501/index1.html">Services</a></div>
-      <div class="nav-item"><a href="http://127.0.0.1:5501/location.html">Location</a></div>
-      <div class="nav-item"><a href="http://127.0.0.1:5501/group.html">Join Group</a></div>
-      <div class="nav-item"><a href="http://127.0.0.1:5501/pay.html">Pay Online</a></div>
-      <div class="nav-item"><a href="http://127.0.0.1:5501/work.html">work</a></div>
+      <div class="nav-item"><a href="index2.html">Login</a></div>
+      <div class="nav-item"><a href="index.html">Home</a></div>
+      <div class="nav-item"><a href="contect.html">Contact</a></div>
+      <div class="nav-item"><a href="index1.html">Services</a></div>
+      <div class="nav-item"><a href="location.html">Location</a></div>
+      <div class="nav-item"><a href="group.html">Join Group</a></div>
+      <div class="nav-item"><a href="pay.html">Pay Online</a></div>
+      <div class="nav-item"><a href="work.html">work</a></div>
 
   </nav>
 <body>
@@ -265,7 +265,7 @@ a:hover {
 </div>
 <div class="des">
 <p>आप नीचे जाकर सभी विवरण प्राप्त कर सकते हैं...</p>
- <button><a href ="http://127.0.0.1:5501/bank.html">check</a></button>
+ <button><a href ="bank.html">check</a></button>
 </div>
 </div>
 
@@ -282,7 +282,7 @@ a:hover {
 </div>
 <div class="des">
    <p>आप नीचे जाकर सभी विवरण प्राप्त कर सकते हैं...</p>
-<button><a href="http://127.0.0.1:5501/scolarship.html">check</a></button>
+<button><a href="scolarship.html">check</a></button>
 </div>
 </div>
 
@@ -297,7 +297,7 @@ a:hover {
    </div>
    <div class="des">
       <p>आप नीचे जाकर सभी विवरण प्राप्त कर सकते हैं...</p>
-    <button><a href="http://127.0.0.1:5501/samagr.html">click</a></button>
+    <button><a href="samagr.html">click</a></button>
    
    </div>
    </div>
